# tsnative

./: .clang-format  .gitignore  3PL.txt  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE.txt  LIMITATIONS.md  README.md  build_host.sh  conanfile.txt  package-lock.json  package.json  settings.yml  tsconfig.json  tslint.json  tsnative-config.cmake  tsnative.js  tsnative.sh  variables.ts
boilerplate/: CMakeLists.txt  PreLoad.cmake  README.md  package.json
boilerplate/cmake/: cmake_dependencies.cmake  conan_dependencies.cmake  external_extensions.cmake  init_cmake.cmake  init_conan.cmake  utils.cmake
boilerplate/cxx/: CMakeLists.txt
boilerplate/cxx/point/: CMakeLists.txt
boilerplate/ts/: CMakeLists.txt  main.ts
cmake/: CMakeLists.txt  FindDeclarator.cmake  FindStdLib.cmake  FindTsCompiler.cmake  FindTsDeclarator.cmake  FindTsVerifier.cmake  FindTsvmc.cmake  StdUtils.cmake  TsBuildUtils.cmake  TsDeclaratorUtils.cmake  abslConfig.cmake  abslTargets.cmake  utils.cmake
compiler/scripts/: CMakeLists.txt  TsBuildUtils.cmake  TsBuildUtils2.cmake  build_time_profiler.py  time.py  tsnative-compiler-debug  tsnative.sh
cxx_node_extensions/llvm_ir_eh_generator/: CMakeLists.txt  index.js  llvm-ir-eh-generator.d.ts  package.json  tsconfig.json
cxx_node_extensions/llvm_ir_eh_generator/src/: generator.cc
declarator/: CMakeLists.txt  README.md  build.sh  conanfile.py
declarator/cmake/: TsDeclaratorUtils.cmake
declarator/include/: TS.h
declarator/scripts/: tsnative-indexer.py
declarator/src/: main.cpp
declarator/src/analyzer/: Analyzer.cpp  Analyzer.h  Annotation.cpp  Annotation.h  CMakeLists.txt  Checkers.cpp  Checkers.h  ClassDetails.cpp  ClassDetails.h  InheritanceNode.cpp  InheritanceNode.h  MakeClass.cpp  MakeClass.h  MakeCodeBlock.cpp  MakeCodeBlock.h  MakeEnum.cpp  MakeEnum.h  MakeFunction.cpp  MakeFunction.h  MakeGenericClass.cpp  MakeGenericClass.h  MakeNamespace.cpp  MakeNamespace.h  TsSignature.cpp  TsSignature.h  TsUtils.cpp  TsUtils.h  TypeUtils.cpp  TypeUtils.h
declarator/src/constants/: Annotations.h  CMakeLists.txt
declarator/src/generator/: AbstractBlock.cpp  AbstractBlock.h  AbstractMethodBlock.cpp  AbstractMethodBlock.h  CMakeLists.txt  ClassBlock.cpp  ClassBlock.h  ClassDetails.cpp  ClassDetails.h  ClosureBlock.cpp  ClosureBlock.h  CodeBlock.cpp  CodeBlock.h  CommentBlock.cpp  CommentBlock.h  ComputedPropertyNameBlock.cpp  ComputedPropertyNameBlock.h  ContainerBlock.cpp  ContainerBlock.h  Decorator.cpp  Decorator.h  ElementAccessExpressionBlock.cpp  ElementAccessExpressionBlock.h  EnumBlock.cpp  EnumBlock.h  FieldBlock.cpp  FieldBlock.h  FileBlock.cpp  FileBlock.h  FunctionBlock.cpp  FunctionBlock.h  FunctionDetails.cpp  FunctionDetails.h  GenericClassBlock.cpp  GenericClassBlock.h  GenericMethodBlock.cpp  GenericMethodBlock.h  Ignore.cpp  Ignore.h  ImportBlock.cpp  (+15 more)
declarator/src/global/: Annotations.h  CMakeLists.txt  Settings.cpp  Settings.h
declarator/src/parser/: AbstractItem.cpp  AbstractItem.h  Annotation.cpp  Annotation.h  CMakeLists.txt  ClassItem.cpp  ClassItem.h  ClassTemplateItem.cpp  ClassTemplateItem.h  ClassTemplateSpecializationItem.cpp  ClassTemplateSpecializationItem.h  CodeBlockItem.cpp  CodeBlockItem.h  Collection.cpp  Collection.h  ContainerItem.cpp  ContainerItem.h  Diagnostics.cpp  (+29 more)
declarator/test/: runner.ts
playground/: CMakeLists.txt  conanfile.py  extension  playground.ts  start.sh
std/: .clang-format  CMakeLists.txt  build.sh  conanfile.py  constants.js  constants.ts  tsnative-std-config.cmake  tsnative-stdConfig.cmake
std/cmake/: FindStdLib.cmake
std/decorators/: decorators.d.ts  decorators.ts
std/definitions/: console.d.ts  gc.d.ts  iterable.d.ts  lib.std.d.ts  lib.std.gc.d.ts  lib.std.iterable.d.ts  lib.std.numeric.d.ts  lib.std.stubs.d.ts  lib.std.utils.d.ts  mapiterator.d.ts  setiterator.d.ts  stringiterator.d.ts  tsarray.d.ts  tsboolean.d.ts  tsclosure.d.ts  tsdate.d.ts  tsmap.d.ts  tsmath.d.ts  tsnull.d.ts  tsnumber.d.ts  tsobject.d.ts  tsset.d.ts  tsstring.d.ts  tstuple.d.ts  tsundefined.d.ts  tsunion.d.ts
std/include/: array.h  console.h  iterable.h  map.h  orderedmap.h  set.h  stdstring.h  tsclosure.h  tuple.h
std/src/: args_to_array.cpp  console.cpp  diagnostics.cpp  event_loop.cpp  gc.cpp  id_generator.cpp  memory_diagnostics.cpp  parse_float.cpp  parse_int.cpp  runtime.cpp  set_interval.cpp  set_timeout.cpp  sizeof.cpp  stdstring.cpp  template_instances.cpp  timer_object.cpp  tsboolean.cpp  tsclosure.cpp  tsdate.cpp  tslazy_closure.cpp  tsmath.cpp  tsnull.cpp  tsnumber.cpp  tsobject.cpp  tspromise.cpp  tsstring.cpp  tstuple.cpp  tsundefined.cpp  tsunion.cpp
std/test/: gtest_example.cpp  runtime_tests.cpp
test/: CMakeLists.txt  conanfile.py  declarator_test.ts  package.json  runtime_test.ts  start.sh  test-runner.ts  testrunner.sh  tsconfig.json
test/cases/: arithmetic.ll  arithmetic.ts  array.ll  array.ts  arrow_function.ll  arrow_function.ts  boolean.ll  class.ll  class.ts  for.ll  for.ts  function.ll  if.ll  intersection_type.ll  intersection_type.ts  lib-function.ll  number-comparison.ll  object.ll  static_methods.ll  static_methods.ts  string.ll  top-level-statements.ll  union_type.ll  union_type.ts  variable.ll  while.ll
test/cmake/: FindTsvmc.cmake
test/src/: array.ts  class.ts  cpp_numeric_builtins.ts  cpp_numeric_builtins_compound_assignments.ts  enum.ts  function.ts  generics_and_cpp_templates.ts  import_from_module.ts  import_from_module_defs.d.ts  import_from_module_imports.ts  interface.ts  lexical_environment.ts  logical_ops.ts  map.ts  null.ts  object.ts  objects_log.ts  rest_parameters.ts  scopes.ts  set.ts  tuple.ts  undefined.ts  union_type.ts  variables.ts
test/unit/: arithmetic.ts  array.ts  arrow_function.ts  boolean.ts  class.ts  closures.ts  compound_assignments.ts  cpp_closures.ts  cpp_numeric_builtins.ts  dummy_ns.ts  for.ts  function.ts  function_as_boolean.ts  intersection.ts  lexical_environment.ts  null.ts  object.ts  string.ts  subtypes_initialization.ts  switch.ts  top-level-statements.ts  undefined.ts  union_type.ts  while.ts
(+1178 files in other folders)
